Avoid scrollbars from Settings and better position .Love class on mobile

--- a/src/ui/styles/app.css
+++ b/src/ui/styles/app.css
@@ -165,6 +165,7 @@ html, body, #app, .Wallpaper {
 }
 
 .Settings {
+  overflow: hidden;
   color: #fff;
   margin-left: auto;
   margin-right: auto;
@@ -327,13 +328,13 @@ html, body, #app, .Wallpaper {
 }
 
 .Love {
-  bottom: 2rem;
   position: fixed;
+  bottom: 1.5rem;
 }
 
 @media only screen and (max-width: 425px) {
   .Love {
-    right: 2rem;
+    right: 1.5rem;
   }
 }
 
